WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65301
[EFL] Fix warning caused by undefined static api.
https://bugs.webkit.org/show_bug.cgi?id=65301
Summary
[EFL] Fix warning caused by undefined static api.
KwangHyuk
Reported
2011-07-27 21:34:41 PDT
Both _ewk_tiled_backing_store_item_request_add and _ewk_tiled_backing_store_item_request_delare declared, but their bodies are not defined and they are not referenced anywhere. Therefore, I remove both two API's declaration in order to resolve warning message caused by them.
Attachments
Patch
(1.78 KB, patch)
2011-07-27 21:39 PDT
,
KwangHyuk
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
KwangHyuk
Comment 1
2011-07-27 21:39:28 PDT
Created
attachment 102225
[details]
Patch
Raphael Kubo da Costa (:rakuco)
Comment 2
2011-07-28 04:45:48 PDT
LGTM.
WebKit Review Bot
Comment 3
2011-08-09 07:56:09 PDT
Comment on
attachment 102225
[details]
Patch Clearing flags on attachment: 102225 Committed
r92685
: <
http://trac.webkit.org/changeset/92685
>
WebKit Review Bot
Comment 4
2011-08-09 07:56:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug