[EFL] Fix warning caused by undefined static api. https://bugs.webkit.org/show_bug.cgi?id=65301

Both _ewk_tiled_backing_store_item_request_add and _ewk_tiled_backing_store_item_request_del
are declared, but their bodies are not defined and they are not referenced anywhere.
Therefore, I remove both two API's declaration in order to resolve warning message caused by them.

Patch by KwangHyuk Kim <hyuki.kim@samsung.com> on 2011-08-09
Reviewed by Kenneth Rohde Christiansen.

* ewk/ewk_tiled_backing_store.c:

Canonical link: https://commits.webkit.org/81771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92685 268f45cc-cd09-0410-ab3c-d52691b4dbfc